--- a/immboots/index.html
+++ b/immboots/index.html
@@ -359,6 +359,9 @@ Donec eget purus nisl. Suspendisse rutrum eget turpis non porta. Praesent ut urn
 					<div class="m-t-30">
 						<input type="text" class="imm-datepicker">
 					</div>
+					<div class="m-t-30">
+						<input type="text" class="imm-number">
+					</div>
 				</div>
 			</div>
 		</div>
