working on color picker, font awesome added

--- a/immboots/index.html
+++ b/immboots/index.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/immboost.css">
+<link rel="stylesheet" href="css/fa/css/font-awesome.css">
 <script src="js/immboost.js"></script>
 
 <div class="container-m p-0-10 b-b o-h">
@@ -361,6 +362,9 @@ Donec eget purus nisl. Suspendisse rutrum eget turpis non porta. Praesent ut urn
 					</div>
 					<div class="m-t-50">
 						<input type="text" class="imm-number">
+					</div>
+					<div class="m-t-50">
+						<input type="text" class="imm-color">
 					</div>
 				</div>
 			</div>
