working on worktime UI

--- a/immboots/index.html
+++ b/immboots/index.html
@@ -366,6 +366,9 @@ Donec eget purus nisl. Suspendisse rutrum eget turpis non porta. Praesent ut urn
 					<div class="m-t-50">
 						<input type="text" class="imm-color">
 					</div>
+					<div class="m-t-50">
+						<input type="text" class="imm-worktime">
+					</div>
 				</div>
 			</div>
 		</div>
