Work time in progress

--- a/immboots/index.html
+++ b/immboots/index.html
@@ -367,7 +367,7 @@ Donec eget purus nisl. Suspendisse rutrum eget turpis non porta. Praesent ut urn
 						<input type="text" class="imm-color">
 					</div>
 					<div class="m-t-50">
-						<input type="text" class="imm-worktime">
+						<input type="text" value="2.2:30-6.7-8:45,4-6.12-20" class="imm-worktime">
 					</div>
 				</div>
 			</div>
