--- a/acoloader/index.html
+++ b/acoloader/index.html
@@ -116,7 +116,7 @@
 													<p>Visible Line Length</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="10" data-max="1000" data-step="1" class="imm-slider l-set" data-name="maxlength" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="10" data-max="1000" data-step="1" class="imm-slider l-set" data-name="maxLength" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -126,7 +126,7 @@
 													<p>Line Width</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="1" data-max="50" data-step="1" class="imm-slider l-set" data-name="linewidth" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="1" data-max="50" data-step="1" class="imm-slider l-set" data-name="lineWidth" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -136,7 +136,7 @@
 													<p>Long Line Length</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="10" data-max="200" data-step="1" class="imm-slider l-set" data-name="longlinelength" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="10" data-max="200" data-step="1" class="imm-slider l-set" data-name="longLineLength" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -146,7 +146,7 @@
 													<p>Short Line Length</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="10" data-max="200" data-step="1" class="imm-slider l-set" data-name="shortlinelength" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="10" data-max="200" data-step="1" class="imm-slider l-set" data-name="shortLineLength" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -156,7 +156,7 @@
 													<p>Fast Rotation Angle (deg)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertToDeg" data-min="0" data-max="360" data-step="1" class="imm-slider l-set" data-name="fastrotateangle" data-type="private" value="0">
+													<input type="text" data-mw="convertToDeg" data-min="0" data-max="360" data-step="1" class="imm-slider l-set" data-name="fastRotateAngle" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -166,7 +166,7 @@
 													<p>Slow Rotation Angle (deg)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertToDeg" data-min="0" data-max="360" data-step="1" class="imm-slider l-set" data-name="slowrotateangle" data-type="private" value="0">
+													<input type="text" data-mw="convertToDeg" data-min="0" data-max="360" data-step="1" class="imm-slider l-set" data-name="slowRotateAngle" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -176,7 +176,7 @@
 													<p>Long Line Time (ms)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="longlinetime" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="longLineTime" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -186,7 +186,7 @@
 													<p>Short Line Time (ms)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="shortlinetime" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="shortLineTime" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -196,7 +196,7 @@
 													<p>Fast Rotation Time (ms)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="fastrotatetime" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="fastRotateTime" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -206,7 +206,7 @@
 													<p>Slow Rotation Time (ms)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="slowrotatetime" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="slowRotateTime" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -216,7 +216,7 @@
 													<p>Gap Time (ms)</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="gaptime" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="0" data-max="5000" data-step="5" class="imm-slider l-set" data-name="gapTime" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
@@ -226,7 +226,7 @@
 													<p>Gap Width</p>
 												</div>
 												<div>
-													<input type="text" data-mw="convertNums" data-min="0" data-max="50" data-step="1" class="imm-slider l-set" data-name="gapwidth" data-type="private" value="0">
+													<input type="text" data-mw="convertNums" data-min="0" data-max="50" data-step="1" class="imm-slider l-set" data-name="gapWidth" data-type="public" value="0">
 												</div>
 											</div>
 										</div>
