Lib updated, cleaning up a bit

--- a/acoloader/index.html
+++ b/acoloader/index.html
@@ -246,7 +246,7 @@
 <script src="./lib/immboost.js"></script>
 <script src="./main.js"></script>
 <script>
-	var l = new Loading();
+	var l = new ACOLoading();
 	document.querySelector('#load').appendChild(l.DOM);
 	getSettings(l);
 	l.play();
