--- a/telechart/index.html
+++ b/telechart/index.html
@@ -1,6 +1,8 @@
 <title>Telegram Charts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 <style>
     html,body{
         margin: 0;
